fix: a11y contrast ratio

--- a/docs/.vuepress/style.styl
+++ b/docs/.vuepress/style.styl
@@ -24,6 +24,7 @@
     max-width 100%
     padding: 0 2.5rem
   blockquote
+    color lighten($textColor, 15%)
     font-style italic
     margin 0
     span
